@@ -1,3 +1,8 @@
+2004-01-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13736
+	* g++.dg/parse/cast2.C: New test.
+
 2004-01-27  James E Wilson  <wilson@specifixinc.com>
 
 	* objc.dg/encode-2.m (main): New local string.  Set depending on
